examples/modules/expected/0761-modules-imported-generic-undeclared-field.stderr
error: unknown type 'Missing'
  --> examples/modules/0761-modules-imported-generic-undeclared-field/lib.sx:11:8
   |
11 |     y: Missing;
   |        ^^^^^^^
